--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1.0.68"
+bitflags = "1.3.2"
 bytemuck = { version="1.12.3", features=["derive"] }
 cfg-if = "1.0.0"
 cgmath = "0.18.0"
@@ -31,3 +32,6 @@ web-sys = { version="0.3.58", features = [
     "Element",
 ]}
 
+[features]
+default = ["debug"]
+debug = []
