--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "force-graph-wgpu"
+name = "tp-twitter"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,6 +14,7 @@ cfg-if = "1.0.0"
 cgmath = "0.18.0"
 console_log = "0.2.0"
 env_logger = "0.10.0"
+image = { version = "0.24.6", features = ["jpeg", "png"] }
 log = "0.4.17"
 pollster = "0.2.5"
 simple_logger = "4.0.0"
